kustom/overlays/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        deployment: person-service
      annotations: {}
        
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/book-dev/person-service:latest
          imagePullPolicy: Always
          name: person-service
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          # resources:
          #   requests:
          #     memory: 32Mi
          #     cpu: 10Mi
          #   limits:
          #     memory: 256Mi
          #     cpu: 200Mi
      restartPolicy: Always
