kustom/overlays/stage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: person-service
spec:
  to:
    kind: Service
    name: stage-person-service
